# backend

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.dev  README.md
.github/workflows/: ci.yml  release.yml
crates/authbox-app/: Cargo.toml
crates/authbox-app/src/: authentication_service.rs  federation_service.rs  invitation_service.rs  lib.rs  password_reset_service.rs
crates/authbox-core/: Cargo.toml
crates/authbox-core/src/: lib.rs
crates/authbox-core/src/auth/: auth_error.rs  auth_flow.rs  auth_flow_store.rs  clock.rs  credential_store.rs  email_sender.rs  federated_identity.rs  federated_identity_store.rs  federation_connection.rs  mod.rs  oidc_port.rs  password_credential.rs  password_hasher.rs  principal_id.rs  secret_generator.rs  session.rs  session_id.rs  session_store.rs  user_directory.rs  verification_token.rs  verification_token_store.rs  verified_claims.rs
crates/authbox-core/src/credential/: mod.rs  ports.rs
crates/authbox-core/src/rbac/: grant.rs  mod.rs  operation.rs  policy.rs  resource_hierarchy.rs  resource_ref.rs  role.rs  role_error.rs
crates/authbox-inf/: Cargo.toml
crates/authbox-inf/migrations/: V1__auth.sql  V2__federation.sql  V3__verification.sql
crates/authbox-inf/src/: argon2_password_hasher.rs  in_memory_auth_flow_store.rs  in_memory_credential_store.rs  in_memory_federated_identity_store.rs  in_memory_session_store.rs  in_memory_verification_token_store.rs  lib.rs  logging_email_sender.rs  migrations.rs  oidc_relying_party.rs  postgres_auth_flow_store.rs  postgres_credential_store.rs  postgres_federated_identity_store.rs  postgres_session_store.rs  postgres_verification_token_store.rs  random_secret_generator.rs  resend_email_sender.rs  smtp_email_sender.rs  store_dispatch.rs
crates/authbox-inf/tests/: oidc_mock.rs  smtp_mailpit.rs
crates/wiab-app/: Cargo.toml
crates/wiab-app/src/: access_application_service.rs  access_requests.rs  agent_application_service.rs  agent_requests.rs  authorization_service.rs  board_application_service.rs  board_requests.rs  create_meeting_request.rs  create_work_request.rs  lib.rs  meeting_application_service.rs  meeting_client_events.rs  organization_application_service.rs  organization_requests.rs  pipeline_application_service.rs  pipeline_requests.rs  project_application_service.rs  project_requests.rs  repo_application_service.rs  repo_requests.rs  user_application_service.rs  user_requests.rs  vm_application_service.rs  vm_requests.rs  vm_runtime.rs  work_application_service.rs
crates/wiab-core/: Cargo.toml
crates/wiab-core/src/: agent.rs  audio.rs  lib.rs  meeting.rs  meeting_traits.rs  repository.rs  room.rs  transcript.rs
crates/wiab-core/src/access/: access_error.rs  access_policy.rs  mod.rs  operation.rs  role.rs  role_assignment.rs  role_assignment_id.rs  role_assignment_numbering.rs  role_assignment_repository.rs  role_assignment_snapshot.rs  scope.rs
crates/wiab-core/src/agent/: agent.rs  agent_error.rs  agent_id.rs  agent_numbering.rs  agent_repository.rs  agent_snapshot.rs  mod.rs
crates/wiab-core/src/board/: board.rs  board_error.rs  board_id.rs  board_numbering.rs  board_repository.rs  board_snapshot.rs  mod.rs
crates/wiab-core/src/organization/: mod.rs  organization.rs  organization_error.rs  organization_id.rs  organization_numbering.rs  organization_repository.rs  organization_snapshot.rs
crates/wiab-core/src/pipeline/: mod.rs  pipeline.rs  pipeline_error.rs  pipeline_id.rs  pipeline_numbering.rs  pipeline_repository.rs  pipeline_snapshot.rs
crates/wiab-core/src/project/: mod.rs  project.rs  project_error.rs  project_id.rs  project_numbering.rs  project_repository.rs  project_snapshot.rs
crates/wiab-core/src/repo/: branch_name.rs  commit_hash.rs  git_backend.rs  git_backend_error.rs  git_snapshots.rs  mod.rs  repo.rs  repo_error.rs  repo_id.rs  repo_numbering.rs  repo_repository.rs  repo_snapshot.rs  visibility.rs
crates/wiab-core/src/user/: access_token.rs  credential_ports.rs  external_ref.rs  mod.rs  ssh_key.rs  ssh_key_id.rs  token_id.rs  token_scope.rs  user.rs  user_error.rs  user_id.rs  user_kind.rs  user_numbering.rs  user_repository.rs  user_snapshot.rs  user_state.rs
crates/wiab-core/src/vm/: mod.rs  vm.rs  vm_error.rs  vm_id.rs  vm_numbering.rs  vm_repository.rs  vm_resources.rs  vm_snapshot.rs  vm_state.rs  vm_template.rs
crates/wiab-core/src/work/: done.rs  (+9 more)
crates/wiab-inf/: Cargo.toml
crates/wiab-inf/migrations/: V10__user_external_ref.sql  V11__user_state.sql  V12__vm.sql  V1__organization.sql  V2__project.sql  V3__agent.sql  V4__board.sql  V5__repo.sql  V6__pipeline.sql  V7__work.sql  V8__user.sql  V9__role_assignment.sql
crates/wiab-inf/src/: agent_audio_transport.rs  app_state.rs  credential_crypto.rs  git2_backend.rs  git_http.rs  git_ssh.rs  heuristic_meeting_intelligence.rs  http_api.rs  in_memory_agent_numbering.rs  in_memory_agent_repository.rs  in_memory_board_numbering.rs  in_memory_board_repository.rs  in_memory_meeting_repository.rs  in_memory_organization_numbering.rs  in_memory_organization_repository.rs  in_memory_pipeline_numbering.rs  in_memory_pipeline_repository.rs  in_memory_project_numbering.rs  in_memory_project_repository.rs  in_memory_repo_numbering.rs  in_memory_repo_repository.rs  in_memory_role_assignment_numbering.rs  in_memory_role_assignment_repository.rs  in_memory_user_numbering.rs  in_memory_user_repository.rs  in_memory_vm_numbering.rs  in_memory_vm_repository.rs  in_memory_vm_runtime.rs  in_memory_work_numbering.rs  in_memory_work_repository.rs  lib.rs  llama_meeting_intelligence.rs  llama_runtime.rs  model_paths.rs  pg_pool.rs  postgres_agent_repository.rs  postgres_board_repository.rs  postgres_organization_repository.rs  postgres_pipeline_repository.rs  postgres_project_repository.rs  (+12 more)
crates/wiab-inf/tests/: postgres_integration.rs
iac/: .terraform.lock.hcl  README.md  main.tf  terraform.tfvars.example  tfplan  variables.tf
iac/scripts/: provision.sh  wiab-deploy.sh
iac/templates/: cloud-init.yaml.tftpl
scripts/: fetch-models.sh  run-pg.sh
src/: bootstrap.rs  main.rs
