[package]
name = "wiab"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/wiab-core", "crates/wiab-inf", "crates/wiab-app"]

[workspace.dependencies]
wiab-core = { path = "crates/wiab-core" }
wiab-inf = { path = "crates/wiab-inf" }
wiab-app = { path = "crates/wiab-app" }
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
futures-util = "0.3"
mediasoup = "0.20"
opus = "0.3"
rstest = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }
whisper-rs = "0.12"

[dependencies]
wiab-app = { workspace = true }
wiab-core = { workspace = true }
wiab-inf = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.package.wiab-core]
debug = 2
