[package]
name = "wiab"
version = "0.1.0"
edition = "2024"
authors = ["Gos & co ApS"]
license = "MIT"

[workspace]
members = [
    "crates/wiab-core",
    "crates/wiab-inf",
    "crates/wiab-app",
    "crates/authbox-core",
    "crates/authbox-app",
    "crates/authbox-inf",
]

[workspace.dependencies]
wiab-core = { path = "crates/wiab-core" }
wiab-inf = { path = "crates/wiab-inf" }
wiab-app = { path = "crates/wiab-app" }
authbox-core = { path = "crates/authbox-core" }
authbox-app = { path = "crates/authbox-app" }
authbox-inf = { path = "crates/authbox-inf" }
anyhow = "1.0.100"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
crc32fast = "1"
deadpool-postgres = "0.14"
flate2 = "1.0"
futures-util = "0.3"
git2 = "0.20"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
llama-cpp-2 = { version = "0.1.138", default-features = false }
mediasoup = "0.20"
openidconnect = { version = "4", default-features = false, features = ["reqwest"] }
opus = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rand = "0.10"
rcgen = "0.13"
refinery = { version = "0.8", features = ["tokio-postgres"] }
rstest = "0.26.1"
russh = "0.61"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10"
tempfile = "3"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }
whisper-rs = "0.16"

[dependencies]
wiab-app = { workspace = true }
wiab-core = { workspace = true }
wiab-inf = { workspace = true }
authbox-app = { workspace = true }
authbox-core = { workspace = true }
authbox-inf = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
clap = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.package.wiab-core]
debug = 2
