[package]
name = "authbox-inf"
version = "0.1.0"
edition = "2024"

[dependencies]
authbox-app = { workspace = true }
authbox-core = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
deadpool-postgres = { workspace = true }
lettre = { workspace = true }
openidconnect = { workspace = true }
rand = { workspace = true }
refinery = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
