[package]
name = "wiab-inf"
version = "0.1.0"
edition = "2024"

[dependencies]
wiab-app = { workspace = true }
wiab-core = { workspace = true }
authbox-app = { workspace = true }
authbox-core = { workspace = true }
authbox-inf = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
deadpool-postgres = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
git2 = { workspace = true }
llama-cpp-2 = { workspace = true, features = ["dynamic-link"] }
mediasoup = { workspace = true }
opus = { workspace = true }
rand = { workspace = true }
refinery = { workspace = true }
russh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
whisper-rs = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { workspace = true, features = ["dynamic-link", "metal"] }

[dev-dependencies]
tempfile = { workspace = true }
